# knowledge-hub

./: .dockerignore  .env  .env.example  .gitignore  .gitlab-ci.yml  .npmrc  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/: copilot-instructions.md
.specify/memory/: constitution.md
KNOWLEDGE_HUB/.specify/: integration.json
backend/app/: main.py
doc/: API.md  OPERATIONS.md
evaluation/: hnsw-queries.example.json  rag-dataset.example.json  thresholds.example.json
frontend/: Dockerfile  angular.json  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  main.ts  main.tsx  styles.css
mcp_knowledge_hub.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mcp_server/: server.py
mcp_server/tools/: knowledge.py
plan/: 01-categorias-muitos-para-muitos.md  02-ingestao-texto-mcp.md  03-ciclo-vida-documentos.md  04-metadados-citacoes.md  05-limite-relevancia.md  06-busca-hibrida.md  07-tags.md  08-projetos.md  09-versionamento-embeddings.md  10-reindexacao-backup.md  11-indice-hnsw.md  12-avaliacao-rag.md  13-integracao-agentes.md  README.md
plan/frontend/: 01-fundacao.md  02-busca.md  03-pergunte-a-base.md  04-ingestao.md  05-biblioteca.md  06-organizacao.md  07-dashboard.md  08-qualidade-e-evolucao.md  README.md
spec-knowledge-hub/.specify/: init-options.json
specs/001-photo-album-organizer/: spec.md
specs/002-categorias-muitos-para-muitos/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-ingestao-texto-mcp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-ciclo-vida-documentos/: plan.md  spec.md  tasks.md
specs/005-metadados-citacoes/: plan.md  spec.md  tasks.md
specs/006-limite-relevancia/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-busca-hibrida/: data-model.md  plan.md  quickstart.md  research.md  (+2 more)
tests/: test_agent_policy.py  test_backup_restore_plan.py  test_embedding_versioning.py  test_knowledge_api_integration.py  test_knowledge_service.py  test_mcp_knowledge.py  test_rag_evaluation_metrics.py  test_rag_evaluation_runner.py  test_reindex_operations.py  test_vector_index_operations.py
(+117 files in other folders)
