[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-hub"
version = "0.1.0"
description = "Base inicial para um hub de conhecimento com FastAPI, pgvector e MCP"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi>=0.115,<0.116",
  "starlette>=0.40,<0.47",
  "uvicorn[standard]>=0.30,<0.31",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "pgvector>=0.3",
  "httpx>=0.27",
  "python-multipart>=0.0.9",
  "pypdf>=4.3",
  "pdf2image>=1.17",
  "pytesseract>=0.3",
  "mcp>=1.12.4,<1.13",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "pylint>=3.2",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
]

[project.scripts]
backend = "backend.app.main:main"
mcp-server = "mcp_server.server:main"
set-auth-token = "backend.app.cli.config:set_auth_token_main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["backend*", "mcp_server*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
